fixed some alignment issues

--- a/style.css
+++ b/style.css
@@ -486,12 +486,12 @@
     width: 100%;
 }
 .deal-img1-1,.deal-img1-2{
-    width: 420px;
-    margin-left: 20px;
+    width: 400px;
+    margin-left: 25px;
 }
 .deal-img2{
-  width: 420px;
-  margin-left: 20px;
+  width: 400px;
+  margin-left: 25px;
   margin-top: 20px;
   background-size: cover;
   height: 200px;
